# daily-market-brief

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  dailymarketbrief.yml  html_builder.py  main.py  pyproject.toml  requirements.txt  test_html_builder.py
cloudflare/: README.md  README_DEPLOY.md  private-insight-worker.js  private-insight-wrangler.toml  private-insight-wrangler.toml.example  trigger-report-worker.js  wrangler.toml.example
notifiers/: __init__.py  base.py  discord_webhook.py  email_sender.py  line_notify.py  line_sender.py  slack_webhook.py  telegram_bot.py
output/: 2026-07-02_market_brief.html  2026-07-03_market_brief.html  2026-07-03_market_brief.md  2026-07-04_market_brief.html  2026-07-04_market_brief.md  2026-07-05_market_brief.html  2026-07-05_market_brief.md  2026-07-06_market_brief.html  2026-07-06_market_brief.md  2026-07-07_market_brief.html  2026-07-07_market_brief.md  2026-07-08_market_brief.html  2026-07-08_market_brief.md  2026-07-09_market_brief.html  2026-07-09_market_brief.md  2026-07-10_market_brief.html  2026-07-10_market_brief.md  2026-07-11_market_brief.html  2026-07-11_market_brief.md  2026-07-12_market_brief.html  2026-07-12_market_brief.md  2026-07-13_market_brief.html  2026-07-13_market_brief.md  2026-07-14_market_brief.html  2026-07-14_market_brief.md  2026-07-15_market_brief.html  2026-07-15_market_brief.md  2026-07-16_market_brief.html  2026-07-16_market_brief.md  2026-07-17_market_brief.md  2026-07-18_market_brief.html  2026-07-18_market_brief.md  2026-07-19_market_brief.html  2026-07-19_market_brief.md  (+10 more)
(+166 files in other folders)
